--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Jack Blogger</title>
+    <title>Lucia Magazine</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -62,7 +62,7 @@
                                         <a href="about.html">Sobre</a>
                                     </li>
                                     <li>
-                                        <a href="marketing.html">Marketing</a>
+                                        <a href="marketing.html">Produtos</a>
                                     </li>
                                     <li>
                                         <a href="blog.html">Blog</a>
@@ -101,7 +101,10 @@
                                 <img src="images/slider_1.png" alt="#" />
                             </div>
                             <div class="carousel-item">
-                                <img src="images/slider_1.png" alt="#" />
+                                <img src="images/slider_2.png" alt="#" />
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/slider_3.png" alt="#" />
                             </div>
                         </div>
                         <!-- Left and right controls -->
@@ -116,10 +119,10 @@
                 <div class="col-md-5">
                     <div class="full slider_cont_section">
                         <h4>Campeão de vendas</h4>
-                        <h3>Cyber Punk 2077 - Edição Padrão - Xbox One </h3>
-                        <p>O melhor Site de compras de toda a internet</p>
+                        <h3>Cyber Punk 2077</h3>
+                        <p>Edição Padrão - Xbox One</p>
                         <div class="button_section">
-                            <a href="about.html">Leia mais</a>
+                            <a href="marketing.html">Leia mais</a>
                             <a href="contact.html">Fale com a gente</a>
                         </div>
                     </div>
@@ -134,38 +137,73 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="heading">
-                        <h3>About <span class="orange_color">Us</span></h3>
+                        <h3>Sobre<span class="orange_color">Games</span></h3>
                     </div>
                 </div>
             </div>
+            <!--the last of us-->
             <div class="row">
                 <div class="col-md-6">
                     <img src="images/blog1.png" alt="#" />
                 </div>
                 <div class="col-md-6">
                     <div class="full blog_cont">
-                        <h4>The biggest and most awesome camera of year</h4>
-                        <h5>MAY 14 2019 5 READ</h5>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <h4>The Last Of Us Part II</h4>
+                        <h5>PS4 - Edição Padrão</h5>
+                        <p>The Last of Us Part II é um jogo eletrônico de ação-aventura desenvolvido pela Naughty Dog e publicado pela Sony Interactive Entertainment. É o segundo jogo da franquia The Last of Us e foi lançado em 19 de junho de 2020 exclusivamente
+                            para PlayStation </p>
                     </div>
                 </div>
             </div>
+
+            <!--the division 2-->
             <div class="row margin_top_30">
                 <div class="col-md-6">
                     <img src="images/blog2.png" alt="#" />
                 </div>
                 <div class="col-md-6">
                     <div class="full blog_cont">
-                        <h4>What 3 years of android taught me the hard way</h4>
-                        <h5>MAY 19 2019 5 READ</h5>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <h4>The division 2</h4>
+                        <h5>Xbox one - Edição Padrão</h5>
+                        <p>Tom Clancy's The Division 2 é um jogo eletrônico de RPG de ação multijogador desenvolvido pela Massive Entertainment e publicado pela Ubisoft</p>
                     </div>
                 </div>
             </div>
+
+            <!--Console xbox one-->
+            <div class="row margin_top_30">
+                <div class="col-md-6">
+                    <img src="images/blog3.png" alt="#" />
+                </div>
+                <div class="col-md-6">
+                    <div class="full blog_cont">
+                        <h4>Xbox One</h4>
+                        <h5>Microsoft</h5>
+                        <p>Bem vindo a uma nova geração de jogos e entretenimento onde os jogos beiram a fronteira do realismo e ouvir música enquanto joga acontece de maneira instantânea, além disso, você pode mudar entre sua televisão para música ou um
+                            jogo em um instante. O entretenimento que você adora está em um só lugar. Bem vindo ao tudo em um, Xbox One</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--console Ps4-->
+            <div class="row margin_top_30">
+                <div class="col-md-6">
+                    <img src="images/blog4.png" alt="#" />
+                </div>
+                <div class="col-md-6">
+                    <div class="full blog_cont">
+                        <h4>PlayStation 4</h4>
+                        <h5>Sony</h5>
+                        <p>O tato, a forma e a sensibilidade dos botões e sticks duplos analógicos foram melhorados para oferecer maior sensação de controle, não importa qual seja o jogo. A nova tela multitoque clicável na parte frontal do Controle sem Fio
+                            Dualshock 4 abre um mundo de novas possibilidades de jogo, tanto para novos jogadores como para veteranos.</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="row margin_top_30">
                 <div class="col-md-12">
                     <div class="button_section full center margin_top_30">
-                        <a style="margin:0;" href="about.html">Read More</a>
+                        <a style="margin:0;" href="marketing.html">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -178,7 +216,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="heading">
-                        <h3>Marketing</h3>
+                        <h3>Veja Mais</h3>
                     </div>
                 </div>
             </div>
@@ -188,12 +226,9 @@
                 </div>
                 <div class="col-md-6">
                     <div class="full blog_cont">
-                        <h3 class="white_font">Where can I get some</h3>
-                        <h5 class="grey_font">March 19 2019 5 READ</h5>
-                        <p class="white_font">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use
-                            a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first
-                            true generator on the Internet. It uses a dictionary of over 200 Latin words, combined g to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-                            generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator..</p>
+                        <h3 class="white_font">Pathologic 2</h3>
+                        <h5 class="grey_font">Xbox one - PC - PS4</h5>
+                        <p class="white_font">Pathologic 2 é um jogo de aventura da Ice-Pick Lodge e publicado pela tinyBuild. Originalmente planejado como um remake do videogame de 2005 Pathologic, foi definido para ser uma reimaginação completa do jogo original</p>
                     </div>
                 </div>
             </div>
@@ -206,7 +241,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="heading" style="padding-left: 15px;padding-right: 15px;">
-                        <h4 style="border-bottom: solid #333 1px;">Comments / 2</h4>
+                        <h4 style="border-bottom: solid #333 1px;">Comentarios/ 2</h4>
                     </div>
                 </div>
             </div>
@@ -219,9 +254,10 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="full contact_text">
-                                    <h3>Veniam</h3>
-                                    <h4>Posted on Jan 10 / 2017 at 06:53 am</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    <h3>Jack
+                                    </h3>
+                                    <h4>Postado em 20/09/2020</h4>
+                                    <p>The last of us 2 e realmente muito bom atendeu minha expectativas.
                                     </p>
                                 </div>
                             </div>
@@ -237,9 +273,9 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="full contact_text">
-                                    <h3>Jack</h3>
-                                    <h4>Posted on Jan 10 / 2017 at 06:53 am</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                    <h3>Amanda</h3>
+                                    <h4>Postado em 19/02/2020</h4>
+                                    <p>The divison 2 foi o melhor jogo que ja joguei.
                                     </p>
                                 </div>
                             </div>
@@ -253,7 +289,7 @@
             <div class="row margin_top_30">
                 <div class="col-md-12 margin_top_30">
                     <div class="heading" style="padding-left: 15px;padding-right: 15px;">
-                        <h4>Post : Your Comment</h4>
+                        <h4>Seu Comentario</h4>
                     </div>
                 </div>
             </div>
@@ -275,7 +311,7 @@
                                     <div class="row margin_top_30">
                                         <div class="col-md-12">
                                             <div class="center">
-                                                <button>Send</button>
+                                                <button>Enviar</button>
                                             </div>
                                         </div>
                                     </div>
@@ -305,10 +341,11 @@
                             <img class="img-responsive" src="images/blog_1.png" alt="#" />
                         </div>
                         <div class="blog_cont_2">
-                            <h3>Why do we use it</h3>
-                            <p class="sublittle">March 19 2019 5 READ</p>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters as opposed
-                                to using Content here content here making..</p>
+                            <h3>The division 2</h3>
+                            <p class="sublittle">Postado em 19/04/2020</p>
+                            <p>Os games baseados na obras de Tom Clancy são fictícios, mas possuem fortes referências a nossa realidade. The Division trouxe uma grande história de um surto viral espalhado em notas de dólares durante a Black Friday, o dia
+                                de maior consumo do capitalismo global. Muitos doentes, muitos mortos e o caos é instaurado. Com Nova York sem energia, água, alimentos e comunicação, coube a Divisão Estratégica de Segurança Nacional (Strategic Homeland
+                                Division, ou SHD) --que dá nome ao game -- restabelecer todos esses serviços.</p>
                         </div>
                     </div>
                 </div>
@@ -323,9 +360,9 @@
                 <div class="col-lg-4 col-md-6">
                     <a href="#"><img src="images/footer_logo.png" alt="#" /></a>
                     <ul class="contact_information">
-                        <li><span><img src="images/location_icon.png" alt="#" /></span><span class="text_cont">London 145<br>United Kingdom</span></li>
-                        <li><span><img src="images/phone_icon.png" alt="#" /></span><span class="text_cont">987 654 3210<br>987 654 3210</span></li>
-                        <li><span><img src="images/mail_icon.png" alt="#" /></span><span class="text_cont">demo@gmail.com<br>support@gmail.com</span></li>
+                        <li><span><img src="images/location_icon.png" alt="#" /></span><span class="text_cont">São Paulo<br>Brazil</span></li>
+                        <li><span><img src="images/phone_icon.png" alt="#" /></span><span class="text_cont">(12)3456-7890<br>(12)3456-7890</span></li>
+                        <li><span><img src="images/mail_icon.png" alt="#" /></span><span class="text_cont">TesteDeAcessibilidade@gmail.com<br>support@gmail.com</span></li>
                     </ul>
                     <ul class="social_icon">
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -338,13 +375,13 @@
                     <div class="footer_links">
                         <h3>Quick link</h3>
                         <ul>
-                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Features</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Evens</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Markrting</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> P. Incial</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Atualizaçâo</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Eventos</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Produtos</a></li>
                             <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Blog</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Testimonial</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Contact</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Teste de chat</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Contato</a></li>
                         </ul>
                     </div>
                 </div>
@@ -361,7 +398,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="footer_links">
-                        <h3>Contact us</h3>
+                        <h3>Fale com a gente</h3>
                         <form action="index.html">
                             <fieldset>
                                 <div class="field">
@@ -378,7 +415,7 @@
                                 </div>
                                 <div class="field">
                                     <div class="center">
-                                        <button class="reply_bt">Send</button>
+                                        <button class="reply_bt">Enviar</button>
                                     </div>
                                 </div>
                             </fieldset>
@@ -392,7 +429,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Copyright © 2019 Design by <a href="https://html.design/">Free Html Templates</a></p>
+                    <p>Agradecimento especial ao Professor Warner Brenzolin pela paciencia e ao Html Templates e tambem ao curso de html de Escola Front-end</a>
+                    </p>
                 </div>
             </div>
         </div>
