--- a/about.html
+++ b/about.html
@@ -116,9 +116,9 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="full blog_cont ">
-                        <h4>The biggest and most awesome camera of year</h4>
-                        <h5>MAY 14 2019 5 READ</h5>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <h4>Quem nós somos</h4>
+                        <h5>25 de maio de 2019</h5>
+                        <p>Somos um grupo de alunos da unisal no segundo semestre de engenharia da computação</p>
                     </div>
                 </div>
             </div>
@@ -128,9 +128,9 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="full blog_cont ">
-                        <h4>What 3 years of android taught me the hard way</h4>
-                        <h5>MAY 19 2019 5 READ</h5>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <h4>Quem compoem o grupo ?</h4>
+                        <h5>25 de maio de 2019</h5>
+                        <p>Lucas Neves da Silva</p>
                     </div>
                 </div>
             </div>
@@ -171,13 +171,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
             <div class="row margin_top_30 ">
                 <div class="col-md-12 ">
                     <div class="button_section full center margin_top_30 ">
